# hasoil

./: README.md  hasoil.py  pyproject.toml  tox.ini
.github/workflows/: test.yml
