[build-system]
requires = ['flit_core >=2,<3']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'hasoil'
author = 'Nguyễn Gia Phong'
author-email = 'mcsinyx@disroot.org'
home-page = 'https://github.com/ipppi/hasoil'
requires = ['packaging']
description-file = 'README.md'
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Utilities']
requires-python = '>=3.6'
keywords = 'dependency,conflict'
license = 'AGPLv3+'
